--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,7 @@
 body {
     background: linear-gradient(to right, #29323c, #5c748e);
+    padding:10px;
+    padding-bottom:30px;   /* Height of the footer */
 }
 
 #logo {
@@ -12,7 +14,7 @@ body {
 h3 {
     display: inline;
     margin: auto;
-	text-align: center;
+    text-align: center;
 }
 
 .searchbar {
@@ -58,13 +60,10 @@ pre.footer{
     position:absolute;
 }
 
-#body{
-    padding:10px;
-    padding-bottom:30px;   /* Height of the footer */
-}
 footer {
    position:relative;
    bottom:0;
    width:100%;
    height:30px;   /* Height of the footer */
+   background: linear-gradient(to right, #29323c, #485563); 
 }
